# aoc2023

./: CMakeLists.txt  README.md
day1/: main.c
day2/: main.c  struct_types.h
day3/: main.c
day4/: day4.h  main.c
